# Added Params Registry

--- a/templates/action.mustache
+++ b/templates/action.mustache
@@ -1,5 +1,7 @@
 {{license_header}}
-{{rubocop_header}}
+{{generated_code_warning}}
+
+# frozen_string_literal: true
 
 module OpenSearch
   module API
