--- a/templates/action.module.mustache
+++ b/templates/action.module.mustache
@@ -19,7 +19,7 @@ module Actions
     path   = "{{path}}"
     headers = arguments.delete(:headers) || {}
     body = arguments.delete(:body)
-    method = OpenSearch::API::HTTP_PUT
+    method = OpenSearch::API::HTTP_{{http_verb}}
     params = Utils.__validate_and_extract_params arguments, ParamsRegistry.get(__method__)
 
     {{#listify_query_args}}
@@ -29,13 +29,9 @@ module Actions
     perform_request(method, path, params, body, headers).body
   end
 
-  # Register this action with its valid params when the module is loaded.
-  #
-  # @since 6.2.0
-  ParamsRegistry.register(:create, [
-    :wait_for_active_shards,
-    :timeout,
-    :master_timeout,
-    :cluster_manager_timeout
+  ParamsRegistry.register(:{{method_name}}, %i[
+    {{#query_args}}
+    {{arg}}
+    {{/query_args}}
   ].freeze)
 end
