--- a/templates/action.module.mustache
+++ b/templates/action.module.mustache
@@ -1,4 +1,10 @@
 module Actions
+  {{valid_params_constant_name}} = Set.new %i[
+    {{#query_args}}
+    {{arg}}
+    {{/query_args}}
+  ].freeze
+
   {{method_description}}
   #
   {{#method_arguments}}
@@ -24,7 +30,7 @@ module Actions
     headers = arguments.delete(:headers) || {}
     body    = arguments.delete(:body)
     method  = {{{http_verb}}}
-    params  = Utils.__validate_and_extract_params arguments, ParamsRegistry.get(__method__)
+    params  = Utils.__validate_and_extract_params arguments, {{valid_params_constant_name}}
 
     {{#listify_query_args}}
     params[:{{arg}}] = Utils.__listify(params[:{{arg}}]) if params[:{{arg}}]
@@ -32,10 +38,4 @@ module Actions
 
     perform_request(method, path, params, body, headers).body
   end
-
-  ParamsRegistry.register(:{{method_name}}, %i[
-    {{#query_args}}
-    {{arg}}
-    {{/query_args}}
-  ].freeze)
 end
