--- a/templates/action.module.mustache
+++ b/templates/action.module.mustache
@@ -1,8 +1,8 @@
 module Actions
   {{valid_params_constant_name}} = Set.new(%i[
-    {{#query_args}}
-    {{arg}}
-    {{/query_args}}
+    {{#query_params}}
+    {{name}}
+    {{/query_params}}
   ]).freeze
 
   # {{{method_description}}}
@@ -16,25 +16,25 @@ module Actions
     {{/required_args}}
 
     arguments = arguments.clone
-    {{#path_args}}
+    {{#path_params}}
 
     {{#listify}}
-    _{{arg}} = Utils.__listify(arguments.delete(:{{arg}}))
+    _{{name}} = Utils.__listify(arguments.delete(:{{name}}))
     {{/listify}}
     {{^listify}}
-    _{{arg}} = arguments.delete(:{{arg}})
+    _{{name}} = arguments.delete(:{{name}})
     {{/listify}}
-    {{/path_args}}
+    {{/path_params}}
 
     headers = arguments.delete(:headers) || {}
     body    = arguments.delete(:body)
-    params  = Utils.__validate_and_extract_params arguments, {{valid_params_constant_name}}
     url     = Utils.__pathify {{{url_components}}}
     method  = {{{http_verb}}}
+    params  = Utils.__validate_and_extract_params arguments, {{valid_params_constant_name}}
 
-    {{#listify_query_args}}
-    params[:{{arg}}] = Utils.__listify(params[:{{arg}}]) if params[:{{arg}}]
-    {{/listify_query_args}}
+    {{#listify_query_params}}
+    params[:{{name}}] = Utils.__listify(params[:{{name}}]) if params[:{{name}}]
+    {{/listify_query_params}}
 
     perform_request(method, url, params, body, headers).body
   end
