--- a/templates/spec.mustache
+++ b/templates/spec.mustache
@@ -11,7 +11,7 @@ describe 'client{{#namespace}}.{{namespace}}{{/namespace}}#{{name}}' do
       '{{http_verb}}',
       '{{url_path}}',
       {{#query_params}}
-      {{pre}}{{key}}: {{{value}}}{{post}}
+      {{pre}}{{key}}: {{{expected_value}}}{{post}}
       {{/query_params}}
       {{body}}
     ]
@@ -32,13 +32,10 @@ describe 'client{{#namespace}}.{{namespace}}{{/namespace}}#{{name}}' do
   {{/blank_line}}
   {{/required_components}}
   it 'performs the request with all optional params' do
-    expect(client_double.create_pit(
-      index: %w[movies books],
-      keep_alive: '1m',
-      preference: :random,
-      routing: :route,
-      expand_wildcards: :open,
-      allow_partial_pit_creation: false
+    expect(client_double{{#namespace}}.{{namespace}}{{/namespace}}.{{name}}(
+      {{#client_double_args}}
+      {{key}}: {{{value}}}{{^last}},{{/last}}
+      {{/client_double_args}}
     )).to eq({})
   end
 end
