Fixed Linter errors

--- a/templates/action.mustache
+++ b/templates/action.mustache
@@ -1,5 +1,5 @@
-{{license_header}}
-{{generated_code_warning}}
+{{{license_header}}}
+{{{generated_code_warning}}}
 
 # frozen_string_literal: true
 
