JS - External Reference

--- a/templates/action.mustache
+++ b/templates/action.mustache
@@ -1,6 +1,6 @@
 /**
  * {{method_description}}
- * <br/> See Also: {@link {{reference_link}} - {{capitalized_namespace}} - {{method_name}}}
+ * <br/> See Also: {@link {{external_docs}} - {{capitalized_namespace}} - {{doc_method_name}}}
  *
  * @memberOf API-{{capitalized_namespace}}
  *
